project structure for headphone website

--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="images/png" href="images/favicon.png">
+    <link rel="icon" type="images/x-icon" href="images/favicon.ico">
+    <title>Headphone Website</title>
+    <link rel="stylesheet" href="0-styles.css">
 </head>
 <body>
+    <!--header-->
+    <header>
+        <div class="header">
+        <nav>
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle" id="menu-btn"></label>
+            <img src="images/logo_headphones.png" alt="company logo" class="logo">
+            <ul class="header-nav">
+           <li><a href="#">What we do</a></li>
+            <li><a href="#">Our result</a></li>
+           <li><a href="#">Contactus</a></li>
+           </ul>
+        </nav>
+    <div class="header-content">
+        <h1 class="title">Lorem ipsum, dolor sit amet lorem ipsum</h1>
+        <p>Lorem ipsum dolor sit amet Lorem ipsum dolor set</p>
+        <button class="button">CALL TO ACTION</button>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, quaerat nobis. Id minima porro dolores!</p>
+    </div>
+        </div>
+    </header>
+    <!--main-->
+    <main>
+
+    </main>
+    <!--footer-->
+    <footer>
+        
+    </footer>
     
 </body>
 </html>
